fixed footer alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -74,5 +74,6 @@ form{
         width: 100vw;
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
     }
 }
